# arxiv-skill

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  pyproject.toml  research.md
.github/workflows/: lint.yml  tests.yml
assets/examples/: analysis-outline.md  search-output.json
references/: analysis-framework.md  search-syntax.md  storage-format.md  workflow.md
scripts/: __init__.py  cache_paper.py  common.py  list_cached_papers.py  read_cached_paper.py  search_arxiv.py
tests/: test_cache_script.py  test_search_script.py  test_skill_structure.py
